cdebconf (0.66) UNRELEASED; urgency=low

  * Joshua Kwan
    - Apply patch from Guillaume Pernot <gpernot@praksys.org> to fix
      a lone semicolon in newt.c that chokes gcc. (Closes: #251973)

 -- Joshua Kwan <joshk@triplehelix.org>  Tue,  1 Jun 2004 20:52:38 -0700

cdebconf (0.65) unstable; urgency=low

  * Denis Barbier
    - cdebconf-text-udeb.templates:  when fixing #245624, a string format
      was modified.  Now that string freeze is over, this file is updated
      as well as translations.
    - With text interface, append "[*]" to selected items in boolean, select
      and multiselect questions.
  * Eugeniy Meshcheryakov
    - newt frontend: long lines in select and multiselect templates
      were wrongly truncated.  Closes: #245982

 -- Christian Perrier <bubulle@debian.org>  Sun, 23 May 2004 20:05:51 +0200

cdebconf (0.64) unstable; urgency=low

  * Denis Barbier
    - text frontend: the default value in string templates was printed
      with %d instead of %s.  Closes: #245624

 -- Denis Barbier <barbier@debian.org>  Wed, 28 Apr 2004 02:03:19 +0200

cdebconf (0.63) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bokmal, Norwegian (nb.po) by Bjørn Steensrud
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Vietnamese (vi.po) by Vu Quang Trung

 -- Joey Hess <joeyh@debian.org>  Fri, 23 Apr 2004 12:55:32 -0400

cdebconf (0.62) unstable; urgency=low

 -- Denis Barbier <barbier@debian.org>  Thu, 29 Apr 2004 23:35:37 +0200

cdebconf (0.64) unstable; urgency=low

  * Denis Barbier
    - text frontend: the default value in string templates was printed
      with %d instead of %s.  Closes: #245624

 -- Denis Barbier <barbier@debian.org>  Wed, 28 Apr 2004 02:03:19 +0200

cdebconf (0.63) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bokmal, Norwegian (nb.po) by Bjørn Steensrud
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll